--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
-    "start": "node server.js"
+    "start": "node server.js",
+    "prod": "npx pm2 restart node-ci-cd"
   },
   "keywords": [],
   "author": "",
