--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -21,21 +21,16 @@ jobs:
           env
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_KEY }}" > ~/.ssh/id_rsa
-          echo "VARIABLE:"
-          cat ~/.ssh/id_rsa
-
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -p 22 ${{ secrets.ARTIFACT_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -p 22 ${{ secrets.HOST }} >> ~/.ssh/known_hosts
           sudo apt-get install sshpass
 
       - name: Deploy to server
         run: |
-          sshpass -p '${{ secrets.PSWD }}' ssh -v -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.HOST }} <<'ENDSSH'
+          ssh -v -o StrictHostKeyChecking=no ${{ secrets.USER }}@${{ secrets.HOST }} <<'ENDSSH'
           cd ${{ secrets.APP_PATH }}
           git pull
-          docker stop ${{ secrets.APP_NAME }}
-          docker system prune -f
-          export ${{ secrets.API_KEY_NAME }}=${{ secrets.API_KEY }}
-          make deploy_headless
+          npm i 
+          npm run prod
           ENDSSH
         
